--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,41 @@
 {
-  "name": "backend",
+  "name": "jwt-authentication-postgresql",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Node.js demo for JWT Authentication with PostgreSQL database",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rafael-pc/node-jwt-authentication-postgresql.git"
+  },
+  "keywords": [
+    "node",
+    "js",
+    "express",
+    "jwt",
+    "authentication",
+    "postgresql"
+  ],
+  "author": "Rafael Pereira",
   "license": "ISC",
-  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/rafael-pc/node-jwt-authentication-postgresql/issues"
+  },
+  "homepage": "https://github.com/rafael-pc/node-jwt-authentication-postgresql#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mysql": "^2.18.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^3.1.10",
-    "pg": "^8.16.2"
+    "pg": "^8.11.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.31.1"
   }
 }
