--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "nodemon": "^3.1.10",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
+    "react-input-mask": "^2.0.4",
     "sequelize": "^6.31.1"
   }
 }
